--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
   <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
   <title>React App</title>
 
   <!-- <script>
@@ -38,6 +40,7 @@
       }
     }
   </script> -->
+  <script async src="https://b.stripecdn.com/connect-js/v0.1/connect.js"></script>
 
 </head>
 
